--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=lab-padroes-projeto-spring
+
+#h2 Data base console
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#2 settings
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+# spring doc
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+
